Reorganize back office route

--- a/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
@@ -78,16 +78,16 @@
 
 	<!-- L'appel des différents scripts de vue -->
 	<script type="text/template" id="categoryTpl">
-    {% include 'LilyKnowledgeBundle:Faq:category.html.twig' %}
+    {% include 'LilyBackOfficeBundle:Faq:category.html.twig' %}
   </script>
   <script type="text/template" id="contentTpl">
-    {% include 'LilyKnowledgeBundle:Faq:content.html.twig' %}
+    {% include 'LilyBackOfficeBundle:Faq:content.html.twig' %}
   </script>
   <script type="text/template" id="editTpl">
-    {% include 'LilyKnowledgeBundle:Faq:content_edit.html.twig' %}
+    {% include 'LilyBackOfficeBundle:Faq:content_edit.html.twig' %}
   </script>
   <script type="text/template" id="breadcrumbTpl">
-    {% include 'LilyKnowledgeBundle:Faq:breadcrumb.html.twig' %}
+    {% include 'LilyBackOfficeBundle:Faq:breadcrumb.html.twig' %}
   </script>
   <script type="text/template" id="modalAlertTpl">
     {% include 'LilyBackOfficeBundle:Utils/Modal:alert.html.twig' %}
