--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -140,6 +140,19 @@
 			config.wsserver = 'ws://ws.saio.fr';
 			{% endif %}
 		</script>
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	    {% if app.environment == 'dev' %}
+		  ga('create', 'UA-58973224-1', 'auto');
+	    {% else %}
+			ga('create', 'UA-58975501-1', 'auto');
+	    {% endif %}
+		</script>
 		{% endautoescape %}
 	{% endblock %}
 
