--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -52,5 +52,18 @@ filter='cssrewrite' %}
     {% include 'LilyBackOfficeBundle:Utils/Notifs:notif_list.html.twig' %}
   </script>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    {% if app.environment == 'dev' %}
+    ga('create', 'UA-58970452-1', 'auto');
+    {% else %}
+    ga('create', 'UA-58965885-1', 'auto');
+    {% endif %}
+  </script>
+
 </body>
 </html>
