fix attempt to tab issue in users/group

--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -30,7 +30,7 @@
         </header>
         <section>
           <section class="js-users-container hbox stretch"></section>
-          <section class="js-groups-container hbox stretch"></section>
+          <section class="js-groups-container hbox stretch" tabindex="-1"></section>
         </section>
   	  </section>
 	  </section>
