change cdn url (front)

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -11,7 +11,7 @@
 {% block stylesheets %}
 
   <link rel="stylesheet" href="{{ asset('css/app/lily.css') }}" type="text/css" />
-  <link rel="stylesheet" href="http://cdn.saio.fr/customer/{{ licence }}/css/lily-custom.css" type="text/css" />
+  <link rel="stylesheet" href="http://cdn-saio.fr/customer/{{ licence }}/css/lily-custom.css" type="text/css" />
 
   <!--[if lt IE 9]>
     <script src="{{ asset('js/ie/respond.js') }}" cache="false"></script>
