--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_reconnect.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_reconnect.html.twig
@@ -4,6 +4,6 @@
 <p class="lily-msg-server-infos">
   <span class="lily-msg-server-info"><%= info %></span>
   <button class="lily-msg-server-action js-reconnect-action">
-  <img class="lily-icon-refresh" src="http://cdn.saio.fr/images/refresh.svg" alt="refresh"><%= userAction %>
+  <img class="lily-icon-refresh" src="http://cdn-saio.fr/images/refresh.svg" alt="refresh"><%= userAction %>
   </button>
 </p>
