--- a/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/Connected/operator.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Dashboard/Connected/operator.html.twig
@@ -1,6 +1,6 @@
-<div class="media">
+<div class="media operator-connected-list">
   <span class="pull-left thumb-sm img-circle">
-    <img src="<%= converted.avatar %>" alt="avatar">
+    <img src="<%= converted.avatar %>" alt="avatar" class="avatar-thumb">
   </span>
   <div class="pull-right <% if (available) { %>text-success <% } else { %> text-danger <% } %> m-t-sm">
     <i class="icon-circle"></i>
