--- a/src/Lily/ChatBundle/Resources/views/Operator/Live/Message/operator.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Live/Message/operator.html.twig
@@ -1,7 +1,7 @@
 <% var globals = require('globals');
   if (operator && operator.id != globals.userId) { %>
     <span class="pull-left thumb-sm img-circle">
-      <img src="<%= operator.avatar %>" alt="avatar">
+      <img src="<%= operator.avatar %>" alt="avatar" class="avatar-thumb">
     </span>
     <p class="msg-operator msg-with-avatar">
       <%= msg %>
