fix conversation list visual bug

--- a/src/Lily/ChatBundle/Resources/views/Operator/Live/skeleton.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/Live/skeleton.html.twig
@@ -9,7 +9,7 @@
           <span class="badge bg-default pull-right">0</span>
         </div>
         <ul class="list-current collapse in">
-        <!-- 
+        <!--
             Current visitor record view
         -->
   	    </ul>
@@ -18,17 +18,17 @@
           <span class="badge bg-default pull-right">0</span>
         </div>
         <ul class="list-waiting">
-        <!-- 
-            Waiting visitor record view 
+        <!--
+            Waiting visitor record view
         -->
         </ul>
       </section>
     </section>
   </aside>
-  <aside class="vbox">  
-    <section class="conversations">
-    <!-- 
-        Conversation view 
+  <aside class="vbox">
+    <section class="conversations show-conversation-list">
+    <!--
+        Conversation view
     -->
-    </section>	
+    </section>
   </aside>
