--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -22,6 +22,10 @@ LIVE CHAT
   z-index: 3;
 }
 
+.conversations .show-conversation-list {
+  padding-left: 275px;
+}
+
 .conversations .avatar {
   float: left;
 }
